--- a/apps/clientmanagement/src/app/clients/add-client/company-contacts-form/company-contacts-form.component.scss
+++ b/apps/clientmanagement/src/app/clients/add-client/company-contacts-form/company-contacts-form.component.scss
@@ -57,3 +57,22 @@ button.add-btn.ant-btn {
   font-size: 1rem;
   font-style: normal;
 }
+
+::ng-deep .add-btn-wrapper{
+  background: #00A551 !important;
+    color: white !important;
+    float: left !important;
+
+}
+.action-btn-wrapper{
+  display: flex;
+}
+
+
+label.label-for-company-contact {
+  margin-left: -0.6vw !important;
+  position:  relative !important;
+}
+.spacing{
+  width: 2vw !important;
+}
