--- a/apps/clientmanagement/src/app/clients/add-client/loacations-form/operating-address-form/operating-address-form.component.scss
+++ b/apps/clientmanagement/src/app/clients/add-client/loacations-form/operating-address-form/operating-address-form.component.scss
@@ -53,6 +53,7 @@ $border:red;
 
 .action-column {
   float: right;
+  display: flex;
 }
 .column-padding-center{
   padding-left: 35%;
